<resources>
    <string name="app_name">EcoQuiz</string>
    <string name="iniciar_partida">Iniciar Partida</string>
    <string name="consultar_ranking">Consultar Ranking</string>
    <string name="bonus">Bônus 2x!!!</string>
    <string name="ok_message">OK</string>
    <string name="msg_vida_extra">VOCÊ GANHOU UMA VIDA EXTRA!!!</string>
    <string name="msg_continue">CONTINUAR</string>
    <string name="enunciado_normal0">Qual é o termo empregado para designar a deterioração das condições físicas, químicas e biológicas de um ecossistema?</string>
    <string name="R0N0">POLUIÇÃO AMBIENTAL</string>
    <string name="R1N0">AQUECIMENTO GLOBAL</string>
    <string name="R2N0">POLUENTES ATMOSFÉRICOS</string>
    <string name="R3N0">POLUENTES AQUÁTICOS</string>
    <string name="tempo">Tempo:</string>
    <string name="crNormal">20</string>
    <string name="pontuacao">Pontuação:</string>
    <string name="pontuacaoAtual">0</string>
    <string name="enunciado_normal1">Qual a ciência que estuda o comportamento animal?</string>
    <string name="R0N1">ETOLOGIA</string>
    <string name="R1N1">FISIOLOGIA</string>
    <string name="R2N1">ANATOMIA</string>
    <string name="R3N1">TAXONOMIA</string>
    <string name="enunciado_normal2">Espaço onde seres vivos se localizam e se desenvolvem:</string>
    <string name="R0N2">NICHO</string>
    <string name="R1N2">REGIÃO</string>
    <string name="R2N2">AMBIENTE</string>
    <string name="R3N2">HABITAT</string>
    <string name="enunciado_normal3">Qual das alternativas abaixo é um consumidor primário?</string>
    <string name="R0N3">FUNGOS</string>
    <string name="R1N3">LEÃO</string>
    <string name="R2N3">VACA</string>
    <string name="R3N3">BALEIA</string>
    <string name="enunciado_normal4">Os organismos interagem entre si e com todas as partes não vivas no ambiente, essas partes não vivas são chamadas de:</string>
    <string name="R0N4">FATORES ABIÓTICOS</string>
    <string name="R1N4">FATORES BIÓTICOS</string>
    <string name="R2N4">BIOSFERA</string>
    <string name="R3N4">NICHO ECOLÓGICO</string>
    <string name="enunciado_normal5">Qual é o termo usado para espécies que possuem nicho ecológico amplo?</string>
    <string name="R0N5">ESPÉCIES ESPECIALISTAS</string>
    <string name="R1N5">ESPÉCIES CONSUMISTAS</string>
    <string name="R2N5">ESPÉCIES AMPLAS</string>
    <string name="R3N5">ESPÉCIES GENERALISTAS</string>
    <string name="enunciado_normal6">Os organismos indispensáveis para manter um ecossistema são:</string>
    <string name="R0N6">CARNÍVOROS E HERBÍVOROS</string>
    <string name="R1N6">PRODUTORES E HERBÍVOROS</string>
    <string name="R2N6">PRODUTORES E DECOMPOSITORES</string>
    <string name="R3N6">HERBÍVOROS E DECOMPOSITORES</string>
    <string name="enunciado_normal7">Uma pessoa ao comer o cogumelo shitake está se comportando como:</string>
    <string name="R0N7">PRODUTOR</string>
    <string name="R1N7">CONSUMIR PRIMÁRIO</string>
    <string name="R2N7">CONSUMIDOR SECUNDÁRIO</string>
    <string name="R3N7">CONSUMIDOR TERCIÁRIO</string>
    <string name="enunciado_normal8">Considerando a poluição em ambientes aquáticos por produtos clorados, o componente biótico da cadeia que deverá apresentar maior concetração de produtos será:</string>
    <string name="R0N8">O FITOPLÂNCTON</string>
    <string name="R1N8">O ZOOPLÂNCTON</string>
    <string name="R2N8">OS PEIXES PLANCTÓFAGOS</string>
    <string name="R3N8">AS AVES PISCÍVORAS</string>
    <string name="enunciado_normal9">O efeito estufa é um fenômeno, onde seu processo é:</string>
    <string name="R0N9">NATURAL E INTENSIFICADO POR AÇÕES HUMANAS</string>
    <string name="R1N9">NATURAL E SEM RELAÇÕES COM AÇÕES SOCIAIS</string>
    <string name="R2N9">ARTIFICIAL</string>
    <string name="R3N9">RECENTE</string>
    <string name="ranking_normal">Ranking Normal</string>
    <string name="creditos">Créditos</string>
    <string name="R0NO0">COMILANÇA SOLAR</string>
    <string name="R1NO0">OUTRO</string>
    <string name="enunciado_novato0">Como é chamado o processo em que a planta produz o seu próprio alimento através da luz solar?</string>
    <string name="R2NO0">DIETA</string>
    <string name="R3NO0">FOTOSSÍNTESE</string>
    <string name="crNovato">30</string>
    <string name="R3NO1">REMONTAGEM</string>
    <string name="R2NO1">PASTAGEM</string>
    <string name="R1NO1">ARAGEM</string>
    <string name="R0NO1">COMPOSTAGEM</string>
    <string name="enunciado_novato1">Como se chama o processo onde os resíduos orgânicos são reciclados e transformados em adubo orgânico:</string>
    <string name="enunciado_novato2">Um dos principais impactos ambientais causados por resíduos sólidos são:</string>
    <string name="R0NO2">Queimadas</string>
    <string name="R1NO2">CONTAMINAÇÃO DAS ÁGUAS</string>
    <string name="R2NO2">Desmatamento</string>
    <string name="R3NO2">Extinção</string>
    <string name="enunciado_novato3">Quais desses NÃO são causadores do efeito estufa?</string>
    <string name="R0NO3">OXIGÊNIO</string>
    <string name="R1NO3">METANO</string>
    <string name="R2NO3">HIDROFLUORCARBONETOS</string>
    <string name="R3NO3">DIÓXIDO DE CARBONO</string>
    <string name="enunciado_novato4">Na biosfera, qual destes contribuem para maior produção de oxigênio atmosférico?</string>
    <string name="R0NO4">TERRAS CULTIVADAS</string>
    <string name="R1NO4">OCEANOS</string>
    <string name="R2NO4">INDÚSTRIAS</string>
    <string name="R3NO4">DESERTOS</string>
    <string name="enunciado_novato5">A palavra ecologiafoi usada pela primeira vez por:</string>
    <string name="R0NO5">GENE LIKENS</string>
    <string name="R1NO5">JOHN HARPER</string>
    <string name="R2NO5">ERNEST HAECKEL</string>
    <string name="R3NO5">T.H DOBZHANSKY</string>
    <string name="enunciado_novato6">Como é denominado o conjunto de organismos da mesma espécie que vivem na mesma área em um determinado mometo?</string>
    <string name="R0NO6">ECOSSISTEMA</string>
    <string name="R1NO6">POPULAÇÃO</string>
    <string name="R2NO6">COMUNIDADE</string>
    <string name="R3NO6">ESPÉCIME</string>
    <string name="enunciado_novato7">Gênero de bactéria que vivem no solo e fixam nitrogênio:</string>
    <string name="R0NO7">CLOSTRIDIUM</string>
    <string name="R1NO7">RHIZOBIUM</string>
    <string name="R2NO7">RHODOCOCCUS</string>
    <string name="R3NO7">NITROSOMONAS</string>
    <string name="enunciado_novato8">Percurso de matéria e energia que se inicia sempre com seres produtores e termina nos decompositores:</string>
    <string name="R0NO8">CADEIA ALIMENTAR</string>
    <string name="R1NO8">RECURSO</string>
    <string name="R2NO8">TEIA ALIMENTAR</string>
    <string name="R3NO8">PREDAÇÃO</string>
    <string name="R1NO9">COMENSALISMO</string>
    <string name="R0NO9">AMENSALISMO</string>
    <string name="enunciado_novato9">Relação ecológica entre duas espécies em que uma inibe ou impede o desenvolvimento da outra:</string>
    <string name="R2NO9">PREDAÇÃO</string>
    <string name="R3NO9">COMPETIÇÃO</string>
    <string name="enunciado_hard0">Qual das práticas abaixo não emite poluentes na atmosfera?</string>
    <string name="R0H0">PRODUÇÃO DE ENERGIA HIDROELÉTRICA</string>
    <string name="R1H0">USO DE FERTILIZANTES</string>
    <string name="R2H0">CONSTRUÇÃO DE ATERROS SANITÁRIOS</string>
    <string name="R3H0">USINAS NUCLEARES</string>
    <string name="crHard">15</string>
    <string name="enunciado_hard1">O aquecimento global é consequência da intensificação de qual fenômeno natural do planeta?</string>
    <string name="R0H1">INVERSÃO TÉRMICA</string>
    <string name="R1H1">EFEITO ESTUFA</string>
    <string name="R2H1">CHUVA ÁCIDA</string>
    <string name="R3H1">EUTROFIZAÇÃO</string>
    <string name="enunciado_hard2">Qual das alternativas abaixo, NÃO é uma grave consequência do efeito estufa?</string>
    <string name="R0H2">DERRETIMENTO DAS CALOTAS POLARES</string>
    <string name="R1H2">AUMENTO DE TERREMOTOS</string>
    <string name="R2H2">MUDANÇAS NO REGIME DE CHUVAS</string>
    <string name="R3H2">AUMENTO DO NÍVEL DOS OCEANOS</string>
    <string name="enunciado_hard3">Podemos identificar como consequências do desmatamento todas as alternativas, exceto:</string>
    <string name="R0H3">AUMENTO DO EFEITO ESTUFA</string>
    <string name="R1H3">DIMINUIÇÃO DA BIODIVERSIDADE</string>
    <string name="R2H3">ELEVAÇÃO DA UMIDADE</string>
    <string name="R3H3">DESGASTE DO SOLO</string>
    <string name="enunciado_hard4">O desmatamento pode trazer diversas consequências para a comunidade ambiente, exceto:</string>
    <string name="R0H4">AUMENTO DE EROSÃO</string>
    <string name="R1H4">MODIFICAÇÕES CLIMÁTICAS</string>
    <string name="R2H4">DESERTIFICAÇÃO</string>
    <string name="R3H4">DIMINUIÇÃO DE EROSÃO</string>
    <string name="enunciado_hard5">As queimadas podem trazer diversas consequências para o meio ambiente, exceto:</string>
    <string name="R0H5">MORTE DE MICRO-ORGANISMOS</string>
    <string name="R1H5">AUMENTO DA POLUIÇÃO ATMOSFÉRICA</string>
    <string name="R2H5">DIMINUIÇÃO DE NUTRIENTES DO SOLO</string>
    <string name="R3H5">REDUÇÃO DO AQUECIMENTO GLOBAL</string>
    <string name="enunciado_Hard6">A poluição dos mares com petróleo ocasiona consequências para o meio ambiente, exceto:</string>
    <string name="R0H6">MORTE DE PEIXES</string>
    <string name="R1H6">DIMINUIÇÃO DE PESCA</string>
    <string name="R2H6">MORTE DE AVES MARINHAS</string>
    <string name="R3H6">AUMENTO DE FOTOSSÍNTESE DAS ALGAS</string>
    <string name="enunciado_Hard7">Existem várias técnicas nos sistemas de cultivo que permitem o uso do solo sem afetar sua consevação, exceto:</string>
    <string name="R0H7">TERRACEAMENTO</string>
    <string name="R1H7">ROTAÇÃO DE CULTURAS</string>
    <string name="R2H7">ADUBAÇÃO ORGÂNICA</string>
    <string name="R3H7">FERTILIZAÇÃO QUÍMICA</string>
</resources>