<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".novato.Novato7">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgLogo"
                    android:layout_width="0dp"
                    android:layout_height="57dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_eco_24" />

                <TextView
                    android:id="@+id/txtEnunciado"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/enunciado_novato7"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

                <Button
                    android:id="@+id/btnResposta0"
                    android:layout_width="160dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/buttonstyle"
                    android:onClick="verificarResposta0"
                    android:text="@string/R0NO7"
                    android:textAlignment="center"
                    android:textColor="@color/colotSecundari"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/txtEnunciado"
                    app:layout_constraintStart_toStartOf="@+id/txtEnunciado"
                    app:layout_constraintTop_toBottomOf="@+id/txtEnunciado" />

                <Button
                    android:id="@+id/btnResposta1"
                    android:layout_width="160dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/buttonstyle"
                    android:onClick="verificarResposta1"
                    android:text="@string/R1NO7"
                    android:textAlignment="center"
                    android:textColor="@color/colotSecundari"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/btnResposta0"
                    app:layout_constraintStart_toStartOf="@+id/btnResposta0"
                    app:layout_constraintTop_toBottomOf="@+id/btnResposta0" />

                <Button
                    android:id="@+id/btnResposta2"
                    android:layout_width="160dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/buttonstyle"
                    android:onClick="verificarResposta2"
                    android:text="@string/R2NO7"
                    android:textAlignment="center"
                    android:textColor="@color/colotSecundari"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/btnResposta1"
                    app:layout_constraintStart_toStartOf="@+id/btnResposta1"
                    app:layout_constraintTop_toBottomOf="@+id/btnResposta1" />

                <Button
                    android:id="@+id/btnResposta3"
                    android:layout_width="160dp"
                    android:layout_height="0dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/buttonstyle"
                    android:onClick="verificarResposta3"
                    android:text="@string/R3NO7"
                    android:textAlignment="center"
                    android:textColor="@color/colotSecundari"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/btnResposta2"
                    app:layout_constraintStart_toStartOf="@+id/btnResposta2"
                    app:layout_constraintTop_toBottomOf="@+id/btnResposta2" />

                <TextView
                    android:id="@+id/txtTempo"
                    android:layout_width="90dp"
                    android:layout_height="33dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/tempo"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnResposta3" />

                <TextView
                    android:id="@+id/txtCronometro"
                    android:layout_width="30dp"
                    android:layout_height="33dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/crNovato"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/btnResposta3"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/txtTempo"
                    app:layout_constraintTop_toBottomOf="@+id/btnResposta3" />

                <TextView
                    android:id="@+id/txtPontuaxion"
                    android:layout_width="130dp"
                    android:layout_height="33dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/pontuacao"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/txtTempo"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/txtTempo"
                    app:layout_constraintTop_toBottomOf="@+id/txtTempo" />

                <TextView
                    android:id="@+id/txtPontuacaoAtual"
                    android:layout_width="45dp"
                    android:layout_height="33dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/pontuacaoAtual"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@+id/txtCronometro"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/txtPontuaxion"
                    app:layout_constraintTop_toBottomOf="@+id/txtCronometro" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>